--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <br>
-    <h2>If you want to explore more about him, <a href="https://en.wikipedia.org/wiki/Muhammad_Yunus" target="_blank">click here.</a></h2>
+    <h2>If you want to explore more about him, <a id="tribute-link" href="https://en.wikipedia.org/wiki/Muhammad_Yunus" target="_blank">click here.</a></h2>
     <br>
     <br>
     </main>
